# credit-scoring

./: .dockerignore  .env_exemple  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/: generate_data.py
src/: config.py
src/agent/: scoring_agent.py
src/api/: main.py
src/dashboard/: app.py
src/features/: feature_engeneering.py
src/model/: train.py
