[project]
name = "credit-scoring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.100.0",
    "fastapi>=0.136.1",
    "joblib>=1.5.3",
    "langchain-core>=1.3.3",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "lightgbm>=4.6.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "shap>=0.51.0",
    "streamlit>=1.57.0",
    "uvicorn>=0.46.0",
    "xgboost>=3.2.0",
]
